# kando

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: ci.yml  release-core.yml  release-tui.yml  release.yml
kando-core/: Cargo.toml  README.md
kando-core/src/: config.rs  lib.rs
kando-core/src/board/: age.rs  hooks.rs  metrics.rs  mod.rs  storage.rs  sync.rs
kando-core/tests/: public_api.rs
kando-tui/: Cargo.toml  README.md
kando-tui/src/: app.rs  main.rs
kando-tui/src/input/: keymap.rs
kando-tui/src/ui/: board_view.rs  card_detail.rs  help.rs  input_modal.rs  metrics.rs  mod.rs  status_bar.rs  theme.rs
src/: app.rs  command.rs  config.rs  main.rs
src/board/: age.rs  hooks.rs  metrics.rs  mod.rs  storage.rs  sync.rs
src/input/: action.rs  keymap.rs  mod.rs
src/ui/: board_view.rs  card_detail.rs  help.rs  input_modal.rs  metrics.rs  mod.rs  status_bar.rs  theme.rs  tutorial.rs
tests/: cli_smoke.sh
