[package]
name = "kando"
version = "1.1.0"
edition = "2024"
description = "A keyboard-first Kanban TUI for your terminal"
license = "Apache-2.0"
repository = "https://github.com/krfl/kando"
rust-version = "1.86"
keywords = ["kanban", "tui", "terminal", "productivity", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.29"
dirs = "6"
fuzzy-matcher = "0.3"
ratatui = "0.30"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1"
unicode-normalization = "0.1.25"
unicode-segmentation = "1.12"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
