[workspace]
members = ["kando-core", "kando-tui"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/krfl/kando"
rust-version = "1.86"

[workspace.dependencies]
kando-core = { path = "kando-core", version = "1.2.1" }
chrono = { version = "0.4", features = ["serde"] }
fuzzy-matcher = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
tempfile = "3"
