[package]
name = "kando-core"
description = "Core library for kando – a keyboard-first Kanban board"
version = "1.2.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["kanban", "board", "productivity"]
categories = ["data-structures"]
readme = "../README.md"

[dependencies]
chrono.workspace = true
dirs = "6"
fuzzy-matcher.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror = "2"
toml.workspace = true
unicode-normalization = "0.1.25"

[dev-dependencies]
tempfile.workspace = true
