[package]
name = "kando-tui"
description = "A keyboard-first Kanban TUI for your terminal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
keywords = ["kanban", "tui", "terminal", "productivity", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "kando"
path = "src/main.rs"

[dependencies]
kando-core.workspace = true
chrono.workspace = true
clap = { version = "4", features = ["derive"] }
color-eyre = "0.6"
crossterm = "0.29"
fuzzy-matcher.workspace = true
ratatui = "0.30"
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
unicode-segmentation = "1.12"
unicode-width = "0.2"

[dev-dependencies]
tempfile.workspace = true
